# extendvhdd

./: Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: rust.yml
benchmark_tools/: Cargo.toml
benchmark_tools/src/: data_reader.rs  main.rs  persisting_hasher.rs
compare/: Cargo.toml  readme.md
compare/resources/: sheet.css
compare/tests/: compare.rs
smhasher/: ahashOutput.txt  clone_smhasher.sh  fallbackNoFoldedOutput.txt  fallbackOutput.txt
smhasher/ahash-cbindings/: Cargo.toml  install.sh
smhasher/ahash-cbindings/src/: lib.rs
src/: aes_hash.rs  convert.rs  fallback_hash.rs  hash_map.rs  hash_quality_test.rs  hash_set.rs  lib.rs  operations.rs  random_state.rs  specialize.rs
tests/: bench.rs  map_tests.rs  nopanic.rs
